--- a/sass/main.scss
+++ b/sass/main.scss
@@ -98,7 +98,7 @@ header {
 .container {
     background: $clr-01;
     padding: 2rem;
-    font-size: clamp(.9rem, 1.2vw, 1.3rem);
+    font-size: .87rem;
     h1 {
         text-align: center;
         font-size: 2.5em;
@@ -108,24 +108,29 @@ header {
     .grid-container {
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(20em, 1fr));
-        gap: 2em;
         padding: 2rem 0;
         .card {
-            padding: 2rem;
+            margin-bottom: 1.5em;
+            padding: 2.5rem;
             background: white;
             &-heading {
                 display: flex;
                 align-items: center;
-                gap: 1em;
+                img {
+                    width: 4em;
+                    margin-left: -.3em;
+                }
                 h4 {
                     font-size: 1.5em;
                     color: $clr-01;
                     margin: 1rem 0;
+                    margin-left: 1em;
                 }
             }
             p {
                 margin-top: 1rem;
                 line-height: 1.6;
+                font-size: 1em;
             }
         }
     }
@@ -134,6 +139,30 @@ header {
 @media (min-width:60em) {
     .container {
         padding: 2rem 4rem;
+        font-size: 1.2vw;
+        .grid-container {
+            .card {
+                margin-top: 1.5em;
+                margin-right: 1.5em;
+            }
+        }
+    }
+}
+
+@media (min-width:608px) {
+    .container {
+        .grid-container {
+            .card {
+                margin-top: 1.5em;
+                margin-right: 1.5em;
+            }
+        }
+    }
+}
+
+@media (min-width:100rem) {
+    .container {
+        font-size: 1.5rem;
     }
 }
 
